<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/darkyellow"
        android:fontFamily="@font/bareun_batang_b"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="45dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="45dp"
        />

    <Button
        android:id="@+id/me_btn"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/bareun_batang_b"
        android:text="@string/me"
        android:textColor="@color/darkblue"
        android:textSize="50sp"
        android:textStyle="bold"
        android:onClick="onClickMeBtn"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/you_btn"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn_custom"
        android:fontFamily="@font/bareun_batang_b"
        android:text="@string/you"
        android:textColor="@color/darkblue"
        android:textSize="50sp"
        android:textStyle="bold"
        android:onClick="onClickYouBtn"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title" />

    <TextView
        android:id="@+id/titleTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bareun_batang_m"
        android:text="@string/birthday"
        android:textSize="20sp"
        android:textColor="@color/darkblue"
        android:textStyle="normal"
        android:background="@color/darkyellow"
        app:layout_constraintTop_toBottomOf="@+id/me_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        android:hint="@string/ph_date"
        app:layout_constraintTop_toBottomOf="@+id/titleTextDate"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        />

    <TextView
        android:id="@+id/titleTextMBTI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bareun_batang_m"
        android:text="@string/mbti"
        android:textSize="20sp"
        android:textColor="@color/darkblue"
        android:textStyle="normal"
        android:background="@color/darkyellow"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent"
        />
    <RadioGroup
        android:id="@+id/rg_ei"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/titleTextMBTI"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        >
        <RadioButton android:id="@+id/rb_e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/extraversion"
            android:onClick="onRadioButtonClicked_mbti"
            />
        <RadioButton android:id="@+id/rb_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/introversion"
            android:onClick="onRadioButtonClicked_mbti"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_sn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/titleTextMBTI"
        app:layout_constraintStart_toEndOf="@+id/rg_ei"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        >
        <RadioButton android:id="@+id/rb_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensing"
            android:onClick="onRadioButtonClicked_mbti"/>
        <RadioButton android:id="@+id/rb_n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intuition"
            android:onClick="onRadioButtonClicked_mbti"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_tf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/titleTextMBTI"
        app:layout_constraintStart_toEndOf="@+id/rg_sn"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        >
        <RadioButton android:id="@+id/rb_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thinking"
            android:onClick="onRadioButtonClicked_mbti"
            />
        <RadioButton android:id="@+id/rb_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feeling"
            android:onClick="onRadioButtonClicked_mbti"
            />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_jp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/titleTextMBTI"
        app:layout_constraintStart_toEndOf="@+id/rg_tf"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        >
        <RadioButton android:id="@+id/rb_j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judging"
            android:onClick="onRadioButtonClicked_mbti"
            />
        <RadioButton android:id="@+id/rb_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/perceiving"
            android:onClick="onRadioButtonClicked_mbti"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/tv_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bareun_batang_m"
        android:textSize="20sp"
        android:textColor="@color/darkblue"
        android:textStyle="normal"
        android:text="notice"
        android:background="@color/darkyellow"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/rg_jp"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/tv_mtbi_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bareun_batang_m"
        android:textSize="20sp"
        android:textColor="@color/darkblue"
        android:textStyle="normal"
        android:text="링크"
        android:background="@color/darkyellow"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:linksClickable="true"
        android:autoLink="web"
        app:layout_constraintTop_toBottomOf="@+id/tv_notice"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/result_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/darkyellow"
        android:fontFamily="@font/bareun_batang_b"
        android:text="@string/result"
        android:textColor="@color/darkblue"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        android:onClick="showResult"
        />

</androidx.constraintlayout.widget.ConstraintLayout>